# yacppto

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml  codeql.yml
src/: CMakeLists.txt  format.cpp  format.h  main.cpp
src/args/: CmdArgs.cpp  CmdArgs.h
src/type/: Config.h  Deseiralizer.cpp  Deserializer.h  RawConfig.h
